--- a/src/main/resources-dev/application-dev.yml
+++ b/src/main/resources-dev/application-dev.yml
@@ -12,8 +12,6 @@ spring:
 
   jpa:
     hibernate:
-#      https://stackoverflow.com/questions/65543131/spring-jpa-hibernate-ddl-auto-update-not-working-in-spring-boot
-#      ddl-auto not working에 관련한 글
       ddl-auto: validate
     properties:
       hibernate:
@@ -25,16 +23,18 @@ spring:
       org.hibernate.SQL: debug
 
 server:
-  port: 5069
-  ssl:
-    enabled: true
-    key-store: keystore.p12
-    key-store-type: PKCS12
-    key-store-password: dla60177
-    key-alias: bns-ssl
-
-
+  port: 7647
 
 file:
   thumbnail:
     path: C://Users/MS/Desktop/목차/프로젝트/점심뭐먹지/picture/
+
+log:
+  config:
+    path: C://Users/MS/Desktop/목차/프로젝트/점심뭐먹지/logs/
+    fileName: randomlunch
+    errorFileName: randomlunch_error
+
+logging:
+  level:
+    root: debug
