--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/main/resources", "src/main/resources-${profile}"
+        }
+    }
+}
