U : set processResources strategy to include in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,12 @@ test {
     useJUnitPlatform()
 }
 
+tasks {
+    processResources {
+        duplicatesStrategy(DuplicatesStrategy.INCLUDE)
+    }
+}
+
 ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile
 sourceSets {
     main {
