--- a/src/main/resources-prod/application-prod.yml
+++ b/src/main/resources-prod/application-prod.yml
@@ -1,14 +1,12 @@
 spring:
+  profiles:
+    include: console-logging, file-logging
+
   datasource:
     url: jdbc:h2:tcp://localhost/~/randomlunch
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
 
   jpa:
     hibernate:
