U : remove spring.profiles.include property

--- a/src/main/resources-dev/application-dev.yml
+++ b/src/main/resources-dev/application-dev.yml
@@ -1,7 +1,4 @@
 spring:
-  profiles:
-    include: console-logging
-
   datasource:
     url: jdbc:h2:tcp://localhost/~/randomlunch
     username: sa
@@ -35,4 +32,4 @@ log:
 
 logging:
   level:
-    root: debug
+    root: info
