--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-    implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.0")
+
 }
 
 test {
@@ -51,4 +51,9 @@ sourceSets {
             srcDirs "src/main/resources", "src/main/resources-${profile}"
         }
     }
+}
+
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile){
+    options.encoding = 'UTF-8'
 }
