U : edit script command

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
     - '$HOME/ .m2/repository'
     - '$HOME/ .gradle'
 
-script: "./gradlew clean build $JASYPT_ENCRYPTOR_PASSWORD"
+script: ./gradlew clean build
 
 before_install:
   - chmod +x gradlew
