--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ deploy:
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
-    bucket: randomlunch.zip
+    bucket: springboot-randomlunch-build
+    key: randomlunch.zip
     bundle_type: zip
     application: randomlunch
     deployment_group: randomlunch-group
