--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ deploy:
     bundle_type: zip
     application: randomlunch
     deployment_group: randomlunch-group
-    region: ap-northeast-2
+    region: us-east-2
     wait-until-deployed: true
 
 # CI 실행 완료 시 메일로 알람
