--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ before_install:
   - chmod +x gradlew
 
 before_deploy:
-  - zip -r springboot-randomlunch * #현재 위치의 모든 파일을 springboot-randomlunch이름으로 압축
-  - mkdir -p deploy # deploy라는 디렉토리를 Travis CI가 실행중인 위치에서 생성
-  - mv springboot-randomlunch.zip deploy/springboot-randomlunch.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appsepc.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cp before-deploy && zip -r before-deploy * #현재 위치의 모든 파일을 before-deploy이름으로 압축
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/springboot-randomlunch.zip
 
 deploy:
   - provider: s3
@@ -39,8 +43,8 @@ deploy:
     bucket: springboot-randomlunch-build
     key: springboot-randomlunch.zip #S3에 업로드되는 zip파일명과 일치되어야함
     bundle_type: zip
-    application: randomlunch
-    deployment_group: randomlunch-group
+    application: springboot-randomlunch
+    deployment_group: springboot-randomlunch-group
     region: us-east-2
     wait-until-deployed: true
 
