--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
   - cp scripts/*.sh before-deploy/
-  - cp appsepc.yml before-deploy/
+  - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
   - cp before-deploy && zip -r before-deploy * #현재 위치의 모든 파일을 before-deploy이름으로 압축
   - cd ../ && mkdir -p deploy
