--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
-    bucket: springboot-randomlunch-build
-    region: ap-northeast-2
+    bucket: springboot-randomlunch-build2
+    region: us-east-2
     skip_cleanup: true
     acl: private
     local_dir: deploy
