--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,16 @@ cache:
     - '$HOME/ .m2/repository'
     - '$HOME/ .gradle'
 
-script: "./gradlew clean build -x test"
+script: "./gradlew clean build -Pprofile=prod -x test"
 
 before_install:
   - chmod +x gradlew
 
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
-  - cp scripts/*.sh before-deploy/
-  - cp appspec.yml before-deploy/
-  - cp build/libs/*.jar before-deploy/
+  - cp -rf scripts/*.sh before-deploy/
+  - cp -rf appspec.yml before-deploy/
+  - cp -rf build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy * #현재 위치의 모든 파일을 before-deploy이름으로 압축
   - cd ../ && mkdir -p deploy
   - mv before-deploy/before-deploy.zip deploy/springboot-randomlunch.zip
