--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_install:
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
   - cp -rf scripts/*.sh before-deploy/
+  - ls
+  - cat appspec.yml
   - cp -rf appspec.yml before-deploy/
   - cp -rf build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy * #현재 위치의 모든 파일을 before-deploy이름으로 압축
