--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ script:
 
 before_install:
   - chmod +x gradlew
+  - git fetch --all
+  - git reset --hard origin/master
 
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
