--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
     - master
 
 git:
-  depth: false # 최신 commit만 받아오도록 설정
+  depth: false
 
 # Travis CI 서버의 Home
 cache:
@@ -16,9 +16,6 @@ cache:
     - '$HOME/ .gradle'
 
 script:
-  - ls
-  - cat appspec.yml
-  - cat .travis.yml
   - ./gradlew clean build -Pprofile=prod -x test
 
 before_install:
@@ -29,8 +26,6 @@ before_install:
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
   - cp -rf scripts/*.sh before-deploy/
-  - ls
-  - cat appspec.yml
   - cp -rf appspec.yml before-deploy/
   - cp -rf build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy * #현재 위치의 모든 파일을 before-deploy이름으로 압축
