--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,15 @@ cache:
     - '$HOME/ .m2/repository'
     - '$HOME/ .gradle'
 
-script:
-  - ./gradlew clean build -Pprofile=prod -x test
-
 before_install:
   - git fetch --all
   - git reset --hard origin/master
   - chmod +x gradlew
+
+install: echo "skip 'gradle assemble' step"
+
+script:
+  - ./gradlew clean build -Pprofile=prod -x test
 
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
