--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 install: echo "skip 'gradle assemble' step"
 
 script:
-  - JASYPT_ENCRYPTOR_PASSWORD=$JASYPT_ENCRYPTOR_PASSWORD ./gradlew clean build -Pprofile=prod
+  - JASYPT_ENCRYPTOR_PASSWORD=$JASYPT_ENCRYPTOR_PASSWORD ./gradlew clean build -Pprofile=prod --info
 
 before_deploy:
   - mkdir -p before-deploy # zip에 포함시킬 파일을 담을 디렉토리 생성
