U : pass test property through command

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ asciidoctor {
 test {
     outputs.dir snippetsDir
     useJUnitPlatform()
+    systemProperty 'jasypt.encryptor.password', System.getProperty("jasypt.encryptor.password")
 }
 
 task copyDocument(type: Copy) { // 생성된 docs 파일을 build시 static 아래에 docs로 복사!
