--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.15.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
